-- Version 2019
EDGE 2.4.0
* Update bcftools from 1.6 to 1.9
* Add Python package lzstring, h5py
* Add biom format output for taxonomy classification module.
* Fix bug: data clean script in docker or symlink directory
* Fix bug: the fix mapping file Description column
* Update gottcha2 and pangia codes for corresponding database update
* Update megahit from 1.0.3 to 1.1.3.
* Update R from 3.3.2 to 3.5.1
* Update rgi from 3.1.1 to 4.2.2
* Update bedtools from 2.19.1 to 2.27.1
* Update minimap2 from 2.10 to 2.16
* Update lrasm from 0.1.0 to 0.2.0 which include new assembler wtdbg2
* Update gottcha dmd complier and use conda to install rapsearch2
* Add MaxBin tools for metagenome contig binning
* Add debug flag in auto_run script
* Add vcf filter options: -I and -r for alternative bases ration and INDEL depth support value
* Add Centrifuge taxonomy classification tool
* Update Kraken to Kraken-2.0.7
* Update Contig taxonomy classification from bwa to minimap2, perl to python
* Add CheckM v1.0.13 tool for assessing the quality of metagenome Binning
* Add AntiSmash v4.1.0 tool for secondary metbolite analysis
* Add QIIME2 pipeline and installation/requirement 

EDGE GUI 2.4.0
* Add Ploidy option for Variant calling
* Add anchor link in the result page to quick accession module result
* Add one more line for LibreOffice xlsx format check
* Adjust mobile portrait width for front page
* Fix bug: the reset function disabled show on the registration iframe page.
* Add Binning tag in Assembly and Annotation Module
* Add CheckM switch in Assembly and Annotation Module
* Update Taxonomy tool result display by user select options
* Add extract reads fastq for Kraken result
* Add Secondary Metabolite Analysis Annotation
* Update Qiime to version 2

Database:
GOTTCHA2: update to Refseq90
Kraken2: New db from Refseq (as of Dec 20, 2018)
MiccrDB: New db from Refseq (as of Dec 20, 2018)
CheckM_DB: source https://data.ace.uq.edu.au/public/CheckM_databases/ (2015 Jan)