@@ -627,7 +627,7 @@
 								<tr>
 									<th data-priority='1'>Project/Run Name</th>
 									<th data-priority='2'>Number of Mapped Contigs</th>
-									<th data-priority='3'>Proportion</th>
+									<th data-priority='3'>Contigs That Mapped With > 85% Identity</th>
 									<th data-priority='4'>Average Fold</th>
 									<th data-priority='5'>Linear Coverage</th>
 									<th data-priority='6'>Average Identity</th>
@@ -640,7 +640,7 @@
 									<tr>
 										<td><a data-ajax='false' target='_blank' href='<TMPL_VAR NAME=PROPROJURL DEFAULT=->/<TMPL_VAR NAME=PROJ DEFAULT=->/HTML_Report/report.html'><TMPL_VAR NAME=PROJNAME DEFAULT=-></a></td>
 										<td><TMPL_VAR NAME=REF_MAPPED_CONTIGS DEFAULT=-></td>
-										<td><TMPL_VAR NAME=REF_PROPORTION_PCT DEFAULT=-></td>
+										<td><TMPL_VAR NAME=REF_MAPPED_CONTIGS_PASS DEFAULT=-></td>
 										<td><TMPL_VAR NAME=REF_CONTIG_AVG_FOLD DEFAULT=-></td>
 										<td><TMPL_VAR NAME=REF_CONTIG_LINEAR_COV DEFAULT=-></td>
 										<td><TMPL_VAR NAME=REF_CONTIG_AVG_IDT_PCT DEFAULT=-></td>
