@@ -5,6 +5,7 @@ EDGE 2.4.0
 * Add biom format output for taxonomy classification module.
 * Fix bug: data clean script in docker or symlink directory
 * Fix bug: the fix mapping file Description column
+* Fix bug: contig map to reference INDELs counting and show >85% mapped contig number
 * Update gottcha2 and pangia codes for corresponding database update
 * Update megahit from 1.0.3 to 1.1.3.
 * Update R from 3.3.2 to 3.5.1
